--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -30,7 +30,12 @@
 
 .notes-column {
     .span(6);
-    text-align:center;
+    text-align:left;
+}
+
+.note_wrap {
+    height : 60px;
+    padding-left: 20px;
 }
 
 #note-media {
