--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -33,6 +33,64 @@
     text-align:left;
 }
 
+#new-wrapper {
+    .span(6);
+}
+
+#fixed-wrapper {
+    .span(6);
+}
+
+#changed-wrapper {
+    .span(6);
+}
+
+#developer-wrapper {
+    .span(6);
+}
+
+#html-wrapper {
+    .span(6);
+}
+
+#resolved-wrapper {
+    .span(6);
+}
+
+#unresolved-wrapper {
+    .span(6);
+}
+
+#new-label {
+    .span(6);
+}
+
+#fixed-label {
+    .span(6);
+}
+
+#changed-label {
+    .span(6);
+}
+
+#developer-label {
+    .span(6);
+}
+
+#html-label {
+    .span(6);
+}
+
+#resolved-label {
+    .span(6);
+}
+
+#unresolved-label {
+    .span(6);
+}
+
+
+
 .note_wrap {
     height : 60px;
     padding-left: 20px;
