--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -25,40 +25,83 @@
 }
 
 .label-column {
-    .span(6);
+    .span(0);
+    background-color: white;
 }
 
 .notes-column {
-    .span(6);
+    .span(12);
     text-align:left;
+    background-color: white;
+}
+
+.note_wrapper {
+    .span(10);
+     float: right;
+}
+
+.label_wrapper {
+    .span(2);
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 #new-wrapper {
-    .span(6);
+    .span(12);
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    padding-bottom:50px;
 }
 
 #fixed-wrapper {
-    .span(6);
+    .span(12);
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    padding-bottom:50px;
 }
 
 #changed-wrapper {
-    .span(6);
+    .span(12);
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    padding-bottom:50px;
 }
 
 #developer-wrapper {
-    .span(6);
+    .span(12);
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    padding-bottom:50px;
 }
 
 #html-wrapper {
-    .span(6);
+    .span(12);
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    padding-bottom:50px;
 }
 
 #resolved-wrapper {
-    .span(6);
+    .span(12);
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    padding-bottom:50px;
 }
 
 #unresolved-wrapper {
-    .span(6);
+    .span(12);
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    padding-bottom:50px;
 }
 
 #new-label {
@@ -92,7 +135,7 @@
 
 
 .note_wrap {
-    height : 60px;
+    height : 40px;
     padding-left: 20px;
 }
 
