--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -181,7 +181,7 @@ background-color: #F5FAFF;
     overflow: hidden;
 
     a {
-        color: #fff;
+        color: #000;
     }
 
     h4 {
@@ -194,11 +194,7 @@ background-color: #F5FAFF;
         margin: 0;
         padding: 3px;
         float: left;
-        box-shadow: 0 3px 3px rgba(126, 137, 147, .5) inset,
-                    0 1px rgba(185, 197, 204, .5);
-        border-radius: 9px;
-        background: #b1becc;
-        background: rgba(207, 218, 230, .25);
+        background: #fff;
     }
 
     li {
@@ -209,17 +205,12 @@ background-color: #F5FAFF;
     }
 
     a {
-        border-bottom: 1px solid rgba(43, 58, 153, .5);
-        box-shadow: 0 -2px rgba(0, 0, 0, .2) inset;
-        text-shadow: 0 1px 0 rgba(0, 0, 0, .35);
     }
 
     span {
-        color: #506aa1;
-        border-bottom: 1px solid #22366d;
-        .box-shadow(0 2px 1 px #0b1b41 inset);
+        color: #000;
         border-radius: 0 6px 6px 0;
-        text-shadow: 0 1px rgba(28, 54, 112, .35);
+        border-bottom: 5px solid rgba(43, 58, 153, .5);
     }
 
     li:first-child {
@@ -245,8 +236,6 @@ background-color: #F5FAFF;
 
 .space #platform {
     ul {
-        box-shadow: 0 0 10px rgba(72, 23, 95, .35) inset,
-                    0 -1px 0 rgba(134, 80, 168, .5) inset;
     }
 
     a {
