Bug 1184281. Fix family nav on tertiary pages.

--- a/bedrock/firefox/templates/firefox/tiles.html
+++ b/bedrock/firefox/templates/firefox/tiles.html
@@ -28,7 +28,7 @@ Our New Tab Experience
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('dark') }}
+  {{ fxfamilynav('desktop', '', 'dark') }}
 {% endblock %}
 
 {% block tabzilla_css %}{% endblock %}
