--- a/bedrock/firefox/templates/firefox/dnt.html
+++ b/bedrock/firefox/templates/firefox/dnt.html
@@ -17,7 +17,7 @@
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('dark') }}
+  {{ fxfamilynav('desktop', '', 'dark') }}
 {% endblock %}
 
 {% block tabzilla_css %}{% endblock %}
